Add stein release sync

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ services:
     - docker
 
 script:
+    - ./mirror.sh stein registry.cn-beijing.aliyuncs.com/openstack-dockers
     - ./mirror.sh ussuri registry.cn-beijing.aliyuncs.com/openstack-dockers
