Sync train dockers

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
     - docker
 
 script:
-    - ./mirror.sh stein registry.cn-beijing.aliyuncs.com/openstack-dockers
+    - ./mirror.sh train registry.cn-beijing.aliyuncs.com/openstack-dockers
